<resources>
    <string name="app_name">5-0f匯率換算</string>
    <string name="zero">0</string>
    <string name="name">02筱昀</string>
    <string name="name_禎">小禎</string>
    <string name="name_3">1號 曾郁禎</string>
    <string name="enter">匯率換算</string>
    <string name="ib">台幣:</string>
    <string name="hint">美金</string>
    <!--    <string name="hint">請輸入數字</string>-->
<!--    <string name="hint">請輸入數字</string>-->
<!--    <string name="zero">0</string>-->
</resources>