<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Silver"
    android:orientation="vertical"
    android:padding="@dimen/pad01">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/m0500_t001"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/m0500_t001"
            android:textColor="@color/Navy"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/m0500_e001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:gravity="end"
            android:hint="@string/hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@string/zero"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/fontsize"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    </TableRow>

    <Button
        android:id="@+id/m0500_b001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/ic_launcher_1_background"
        android:text="@string/enter"
        android:textSize="24sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/m0500_t002"
            android:layout_width="111dp"
            android:layout_height="60dp"
            android:layout_margin="@dimen/pad01"
            android:layout_marginTop="30dp"
            android:text="@string/ib"
            android:textColor="@color/Navy"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/m0500_t003"
            android:layout_width="261dp"
            android:layout_height="60dp"
            android:background="@color/Gray"
            android:gravity="end"
            android:text="@string/zero"
            android:textSize="@dimen/fontsize"
            tools:ignore="TextContrastCheck" />
    </TableRow>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="end"
        android:text="@string/name_3"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>